--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta property='og:title' content="Jang's site" />
+    <meta property='og:image' content='%PUBLIC_URL%/favicon.png' />
+    <meta property='og:description' content='This is my website portfolio. Check out what I have been up to!' data-rh="true">
+    <meta property='og:url' content='https://jangooo.netlify.app//' />
+    <meta property='og:type' content='website' />
+
+    <meta name="author" content="Jang Belche">
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge;" />
 	<!-- Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,600,700" rel="stylesheet">
