--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,28 @@
     -->
     <title>Jang's site</title>
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+    <!-- unpkg -->
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/@egjs/flicking/dist/flicking.css"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/@egjs/flicking/dist/flicking-inline.css"
+      crossorigin="anonymous"
+    />
+    <!-- cdnjs -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/egjs-flicking/4.x.x/flicking.css"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/egjs-flicking/4.x.x/flicking-inline.css"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
