--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
       rel="stylesheet"
     />
     <!-- Font Awesome -->
+    <script src="https://use.fontawesome.com/88f10d8a3d.js"></script>
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
@@ -86,5 +87,21 @@
         });
       }
     </script>
+
+    <!-- Put this at the end of the <body> tag -->
+    <script src="https://swetrix.org/swetrix.js" defer></script>
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        swetrix.init("mbe9pPF2lD5C");
+        swetrix.trackViews();
+      });
+    </script>
+    <noscript>
+      <img
+        src="https://api.swetrix.com/log/noscript?pid=mbe9pPF2lD5C"
+        alt=""
+        referrerpolicy="no-referrer-when-downgrade"
+      />
+    </noscript>
   </body>
 </html>
