--- a/public/index.html
+++ b/public/index.html
@@ -3,16 +3,32 @@
   <head>
     <meta charset="utf-8" />
     <meta property="og:title" content="Jang's site" />
-    <meta property="og:image" content="%PUBLIC_URL%/favicon.png" />
+    <meta
+      property="og:image"
+      content="https://res.cloudinary.com/dcnxhtwot/image/upload/v1667240437/samples/favicon_jjj97j.png"
+    />
     <meta
       property="og:description"
-      content="This is my website portfolio. Check out what I have been up to!"
+      content="Welcome to my website portfolio. Check out what I have been up to!"
       data-rh="true"
     />
     <meta property="og:url" content="https://jang.software/" />
     <meta property="og:type" content="website" />
 
     <meta name="author" content="Jang Belche" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="Jang's portfolio." />
+    <meta property="twitter:url" content="https://jang.software/" />
+    <meta property="twitter:title" content="Jang's site" />
+    <meta
+      property="twitter:description"
+      content="Welcome to my website portfolio. Check out what I have been up to!"
+    />
+    <meta
+      property="twitter:image"
+      content="https://res.cloudinary.com/dcnxhtwot/image/upload/v1667240437/samples/favicon_jjj97j.png"
+    />
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge;" />
     <!-- Fonts -->
@@ -37,7 +53,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="This is my website portfolio. Check out what I have been up to"
+      content="Welcome to my website portfolio. Check out what I have been up to!"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
